test/1.2/errors/T_EVARPARAM_bug22466.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

extern int i(void);

parameter x = i();
bank b {
    // currently gives ICE. Should be one of EVARPARAM, ENCONST or EREGNZ.
    register r size $x @ undefined;
}
